--- a/Apuntes/.obsidian/appearance.json
+++ b/Apuntes/.obsidian/appearance.json
@@ -1,5 +1,5 @@
 {
-  "cssTheme": "Shiba Inu",
+  "cssTheme": "Material Ocean",
   "nativeMenus": false,
   "accentColor": "",
   "theme": "obsidian"
