--- a/Programación distribuida/Tarea 6/Servidores de nombres/client/build.gradle
+++ b/Programación distribuida/Tarea 6/Servidores de nombres/client/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation libs.guava
     
     // GSON
-    implementantion libs.gson
+    implementation libs.gson
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
