--- a/Programación distribuida/Tarea 6/Servidores de nombres/.project
+++ b/Programación distribuida/Tarea 6/Servidores de nombres/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>1-ServerJava</name>
+	<name>1-Servidores de nombres</name>
 	<comment>Project 1-ServerJava created by Buildship.</comment>
 	<projects>
 	</projects>
