--- a/Programación distribuida/Tarea 8/base-productos/pyproject.toml
+++ b/Programación distribuida/Tarea 8/base-productos/pyproject.toml
@@ -2,16 +2,16 @@
 name = "base-productos"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "jesichi/linux",email = "jesichiko@gmail.com"}
-]
+authors = [{ name = "jesichi/linux", email = "jesichiko@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-]
+dependencies = []
 
 [tool.poetry]
-packages = [{include = "base_productos", from = "src"}]
+packages = [{ include = "base_productos", from = "src" }]
+
+[tool.poetry.scripts]
+server = "src.base_productos.App:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
