--- a/Programación distribuida/Tarea 10/Modelo Productor - Consumidor/pyproject.toml
+++ b/Programación distribuida/Tarea 10/Modelo Productor - Consumidor/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 
 [tool.poetry]
-packages = [{ include = "modelo productor _ consumidor", from = "src" }]
+packages = [{ include = "grpc_services", from = "src" }]
 
 
 [tool.poetry.dependencies]
@@ -17,8 +17,8 @@ grpcio-tools = "1.75.1"
 protobuf = ">=6.31.1,<7.0.0"
 
 [tool.poetry.scripts]
-server = "grpc_tarea.server:main"
-client = "grpc_tarea.client:main"
+server = "grpc_services.server:main"
+client = "grpc_services.client:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
